<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".latihan">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" >

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="2dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="0.5"
                android:text="@string/nama"
                android:textSize="@dimen/hurufL" />

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:ems="10"
                android:inputType="text"
                android:text= " "
                android:backgroundTint="@color/black"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="0"
                android:text="@string/gender"
                android:textSize="@dimen/hurufL" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="305dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="98dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:layout_weight="0.5"
                    android:text="@string/pria"
                    android:textAlignment="center"
                    android:textSize="@dimen/hurufL" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:layout_weight="0.5"
                    android:text="@string/wanita"
                    android:textAlignment="center"
                    android:textSize="@dimen/hurufL" />
            </RadioGroup>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="93dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:layout_margin="10dp"
                android:layout_weight="0."
                android:text="@string/hobi"
                android:textSize="@dimen/hurufL" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="203dp"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkbox_coding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center"
                    android:layout_margin="10dp"
                    android:text="Coding" />

                <CheckBox
                    android:id="@+id/checkbox_Reading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center"
                    android:layout_margin="10dp"
                    android:text="Reading" />

                <CheckBox
                    android:id="@+id/checkbox_Traveling"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center"
                    android:layout_margin="10dp"
                    android:text="Traveling" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="89dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="end|bottom"
                android:backgroundTint="@color/white"
                android:src="@drawable/plus" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="end|bottom"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/white"
                android:src="@drawable/close" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>